Charts/prometheus/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  labels:
    app: prometheus
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    -  hosts:
       - "prometheus.avolokhov.pro"
       secretName: "letsencrypt"
  rules:
  - host: "prometheus.avolokhov.pro"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus
            port:
              number: 9090
